Merged in feature/logging-slf4j (pull request #126)
Migrated logging to slf4j

* style: Added load times logging to Gameserver

* refactor(logging): Migrated logging to slf4j

Fixed some warnings along the way

* refactor(logging): Removed slf4j bridge and JUL

* Minor changes to loggers refactor

Approved-by: Zoey76